원하는 함수 실행하도록 클래스 추가

--- a/JAGU_Multidimensional/JAGU_Multidimensional.vcxproj
+++ b/JAGU_Multidimensional/JAGU_Multidimensional.vcxproj
@@ -139,8 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bonus.cpp" />
+    <ClCompile Include="JAGU.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JAGU.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
