--- a/JAGU_Multidimensional/JAGU_Multidimensional.vcxproj.filters
+++ b/JAGU_Multidimensional/JAGU_Multidimensional.vcxproj.filters
@@ -18,8 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="bonus.cpp">
+    <ClCompile Include="JAGU.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JAGU.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
