--- a/JAGU_Factorial/JAGU_Factorial.vcxproj
+++ b/JAGU_Factorial/JAGU_Factorial.vcxproj
@@ -141,8 +141,12 @@
   <ItemGroup>
     <ClCompile Include="Gauss.cpp" />
     <ClCompile Include="Gauss2.cpp" />
+    <ClCompile Include="JAGU.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JAGU.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
