--- a/JAGU_Factorial/JAGU_Factorial.vcxproj.filters
+++ b/JAGU_Factorial/JAGU_Factorial.vcxproj.filters
@@ -27,5 +27,13 @@
     <ClCompile Include="main2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="JAGU.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JAGU.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
