자료구조 실습

--- a/JAGU_Reverse/JAGU_Reverse.vcxproj
+++ b/JAGU_Reverse/JAGU_Reverse.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{555c385e-7890-4f2e-b6cc-0e6cba31474a}</ProjectGuid>
-    <RootNamespace>JAGUMaxValue</RootNamespace>
+    <ProjectGuid>{ab89181e-c487-450c-aa30-ee4e28eebb42}</ProjectGuid>
+    <RootNamespace>JAGUReverse</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bonus2.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
