4자리 이상의 수 입력 시 각 자릿수의 합 구하기

--- a/JAGU_MaxValue/JAGU_MaxValue.vcxproj
+++ b/JAGU_MaxValue/JAGU_MaxValue.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bonus1.cpp" />
     <ClCompile Include="bonus2.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
