--- a/JAGU_Reverse/JAGU_Reverse.vcxproj
+++ b/JAGU_Reverse/JAGU_Reverse.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bonus1.cpp" />
+    <ClCompile Include="bonus2.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
