--- a/JAGU_Stack3/JAGU_Stack3.vcxproj
+++ b/JAGU_Stack3/JAGU_Stack3.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b62b69fb-0ced-474a-8749-2d2ad31ca996}</ProjectGuid>
-    <RootNamespace>JAGUQueue</RootNamespace>
+    <ProjectGuid>{6c537054-af65-40fe-8616-7416e2466ad2}</ProjectGuid>
+    <RootNamespace>JAGUStack3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
